// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/VerticalTabs Active Item 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <h2
        className="psds-verticaltabs__group__header psds-theme--dark"
      >
        <div>
          <span
            className="psds-verticaltabs__header__label"
          >
            Group Header
          </span>
        </div>
      </h2>
      <ul
        className="psds-verticaltabs__list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            data-active={true}
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Basic 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <ul
        className="psds-verticaltabs__list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Collapsible 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <div>
      <h2
        className="psds-verticaltabs__group__header psds-theme--dark"
      >
        <button
          aria-expanded="false"
          className="psds-verticaltabs__group__button"
          onClick={[Function]}
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            Group Header
          </span>
          <div
            aria-hidden="true"
            className="psds-icon psds-icon--size-small psds-verticaltabs__rotatable"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={true}
        className="psds-verticaltabs__list psds-verticaltabs__group__collapsible-list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Collapsible Start Open 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <div>
      <h2
        className="psds-verticaltabs__group__header psds-theme--dark"
      >
        <button
          aria-expanded="true"
          className="psds-verticaltabs__group__button"
          onClick={[Function]}
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            Group Header
          </span>
          <div
            aria-hidden="true"
            className="psds-icon psds-icon--size-small psds-verticaltabs__rotatable psds-verticaltabs__rotatable--is-open"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={false}
        className="psds-verticaltabs__list psds-verticaltabs__group__collapsible-list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Header 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <h2
        className="psds-verticaltabs__group__header psds-theme--dark"
      >
        <div>
          <span
            className="psds-verticaltabs__header__label"
          >
            Group Header
          </span>
        </div>
      </h2>
      <ul
        className="psds-verticaltabs__list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                First
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Second
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Third
              </span>
            </span>
          </div>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Fourth
              </span>
            </span>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 1 Active 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
        data-active={true}
      >
        <span
          aria-expanded={true}
          className="psds-verticaltabs__tier1__header"
        >
          <div
            className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
            data-active={true}
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                fillOpacity=".95"
              />
            </svg>
          </div>
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 1 Collapsible 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
      >
        <button
          aria-expanded={true}
          className="psds-verticaltabs__tier1__header"
          onClick={[Function]}
        >
          <div
            className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                fillOpacity=".95"
              />
            </svg>
          </div>
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
          <div
            aria-hidden="true"
            className="psds-icon psds-icon--size-small psds-verticaltabs__header__label__icon"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
              />
            </svg>
          </div>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 1 Header Basic 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
      >
        <span
          aria-expanded={true}
          className="psds-verticaltabs__tier1__header"
        >
          <div
            className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                fillOpacity=".95"
              />
            </svg>
          </div>
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 1 Header Button 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
      >
        <button
          aria-expanded={true}
          className="psds-verticaltabs__tier1__header"
          onClick={[Function]}
        >
          <div
            className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                fillOpacity=".95"
              />
            </svg>
          </div>
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 1 Header Link 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
      >
        <a
          aria-expanded={true}
          className="psds-verticaltabs__tier1__header"
          href="href"
        >
          <div
            className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
          >
            <svg
              aria-label="placeholder icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                fillOpacity=".95"
              />
            </svg>
          </div>
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 2 Active 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
        data-active={true}
      >
        <span
          className="psds-verticaltabs__tier2__header"
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 2 Basic 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
      >
        <span
          className="psds-verticaltabs__tier2__header"
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 2 Header Basic 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
      >
        <span
          className="psds-verticaltabs__tier2__header"
          icon={<PlaceholderIcon />}
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </span>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 2 Header Button 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
      >
        <button
          className="psds-verticaltabs__tier2__header"
          icon={<PlaceholderIcon />}
          onClick={[Function]}
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </button>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tier 2 Header Link 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <div
        className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
      >
        <a
          className="psds-verticaltabs__tier2__header"
          href="#"
          icon={<PlaceholderIcon />}
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            text here
          </span>
        </a>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Tiers 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <h2
        className="psds-verticaltabs__group__header psds-theme--dark"
      >
        <div>
          <span
            className="psds-verticaltabs__header__label"
          >
            Group Header
          </span>
        </div>
      </h2>
      <ul
        className="psds-verticaltabs__list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                First
              </span>
            </span>
          </div>
          <ul
            className="psds-verticaltabs__list"
          >
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    First
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Second
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Third
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Second
              </span>
            </span>
          </div>
          <ul
            className="psds-verticaltabs__list"
          >
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    First
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Second
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Third
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs Truncated 1`] = `
<div
  style={
    Object {
      "height": "100%",
      "width": "240px",
    }
  }
>
  <ul
    className="psds-verticaltabs"
  >
    <li>
      <h2
        className="psds-verticaltabs__group__header psds-theme--dark"
      >
        <div>
          <span
            className="psds-verticaltabs__header__label"
          >
            Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
          </span>
        </div>
      </h2>
      <ul
        className="psds-verticaltabs__list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
              </span>
            </span>
          </div>
          <ul
            className="psds-verticaltabs__list"
          >
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <div
                className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
              >
                <svg
                  aria-label="placeholder icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                    fillOpacity=".95"
                  />
                </svg>
              </div>
              <span
                className="psds-verticaltabs__header__label"
              >
                Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
              </span>
            </span>
          </div>
          <ul
            className="psds-verticaltabs__list"
          >
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <div>
      <h2
        className="psds-verticaltabs__group__header psds-theme--dark"
      >
        <button
          aria-expanded="true"
          className="psds-verticaltabs__group__button"
          onClick={[Function]}
        >
          <span
            className="psds-verticaltabs__header__label"
          >
            Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
          </span>
          <div
            aria-hidden="true"
            className="psds-icon psds-icon--size-small psds-verticaltabs__rotatable psds-verticaltabs__rotatable--is-open"
          >
            <svg
              aria-label="caret down icon"
              role="img"
              viewBox="0 0 24 24"
            >
              <path
                d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
              />
            </svg>
          </div>
        </button>
      </h2>
      <ul
        aria-hidden={false}
        className="psds-verticaltabs__list psds-verticaltabs__group__collapsible-list"
      >
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <span
                className="psds-verticaltabs__header__label"
              >
                Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
              </span>
            </span>
          </div>
          <ul
            className="psds-verticaltabs__list"
          >
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li>
          <div
            className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
          >
            <span
              aria-expanded={true}
              className="psds-verticaltabs__tier1__header"
            >
              <div
                className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
              >
                <svg
                  aria-label="placeholder icon"
                  role="img"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                    fillOpacity=".95"
                  />
                </svg>
              </div>
              <span
                className="psds-verticaltabs__header__label"
              >
                Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
              </span>
            </span>
          </div>
          <ul
            className="psds-verticaltabs__list"
          >
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
            <li>
              <div
                className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
              >
                <span
                  className="psds-verticaltabs__tier2__header"
                >
                  <span
                    className="psds-verticaltabs__header__label"
                  >
                    Polaroid slow-carb chartreuse keytar cold-pressed salvia single-origin coffee.
                  </span>
                </span>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </div>
  </ul>
</div>
`;

exports[`Storyshots Components/VerticalTabs/Examples Admin Tools 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "height": "100%",
      "justifyContent": "start",
      "width": "100%",
    }
  }
>
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "width": 72,
      }
    }
  >
    <ul
      className="psds-verticaltabs"
    >
      <li>
        <ul
          className="psds-verticaltabs__list"
        >
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                >
                  Dashboard
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                >
                  Account
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <button
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                onClick={[Function]}
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                >
                  People
                </span>
                <div
                  aria-hidden="true"
                  className="psds-icon psds-icon--size-small psds-verticaltabs__header__label__icon"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <ul
              aria-hidden={false}
              className="psds-verticaltabs__list psds-verticaltabs__list--collapsible"
            >
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Organization
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                  data-active={true}
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Admins
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Managers
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Unassigned users
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Pending invites
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                >
                  Analytics
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                >
                  Log
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/VerticalTabs/Examples Design System 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "height": "100%",
      "justifyContent": "start",
      "width": "100%",
    }
  }
>
  <div
    style={
      Object {
        "width": 240,
      }
    }
  >
    <ul
      className="psds-verticaltabs"
    >
      <li>
        <h2
          className="psds-verticaltabs__group__header psds-theme--dark"
        >
          <div>
            <span
              className="psds-verticaltabs__header__label"
            >
              Introduction
            </span>
          </div>
        </h2>
        <ul
          className="psds-verticaltabs__list"
        >
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="psds-verticaltabs__header__label"
                >
                  Install
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="psds-verticaltabs__header__label"
                >
                  Design assets
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="psds-verticaltabs__header__label"
                >
                  Contribute
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="psds-verticaltabs__header__label"
                >
                  Roadmap
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
        </ul>
      </li>
      <hr
        className="psds-verticaltabs__divider psds-theme--dark"
      />
      <li>
        <h2
          className="psds-verticaltabs__group__header psds-theme--dark"
        >
          <div>
            <span
              className="psds-verticaltabs__header__label"
            >
              Foundations
            </span>
          </div>
        </h2>
        <ul
          className="psds-verticaltabs__list"
        >
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
                onClick={[Function]}
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label"
                >
                  Color
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
                onClick={[Function]}
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label"
                >
                  Typography
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
                onClick={[Function]}
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label"
                >
                  Spacing
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
                onClick={[Function]}
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label"
                >
                  Iconography
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
                onClick={[Function]}
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label"
                >
                  Voice & Tone
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
        </ul>
      </li>
      <hr
        className="psds-verticaltabs__divider psds-theme--dark"
      />
      <li>
        <h2
          className="psds-verticaltabs__group__header psds-theme--dark"
        >
          <div>
            <span
              className="psds-verticaltabs__header__label"
            >
              Components
            </span>
          </div>
        </h2>
        <ul
          className="psds-verticaltabs__list"
        >
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="psds-verticaltabs__header__label"
                >
                  Avatar
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            >
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                  data-active={true}
                >
                  <a
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      className="psds-verticaltabs__header__label"
                    >
                      PropTypes
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                  >
                    <span
                      className="psds-verticaltabs__header__label"
                    >
                      Guidelines
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="psds-verticaltabs__header__label"
                >
                  Badge
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <a
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                href="#"
                onClick={[Function]}
              >
                <span
                  className="psds-verticaltabs__header__label"
                >
                  Breadcrumb
                </span>
              </a>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
        </ul>
      </li>
      <hr
        className="psds-verticaltabs__divider psds-theme--dark"
      />
    </ul>
  </div>
</div>
`;

exports[`Storyshots Components/VerticalTabs/Examples Flow 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "height": "100%",
      "justifyContent": "start",
      "width": "100%",
    }
  }
>
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "width": 72,
      }
    }
  >
    <ul
      className="psds-verticaltabs"
    >
      <li>
        <ul
          className="psds-verticaltabs__list"
        >
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <span
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                >
                  Reports Home
                </span>
              </span>
            </div>
            <ul
              className="psds-verticaltabs__list"
            />
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <button
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                onClick={[Function]}
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                >
                  Operational Reports
                </span>
                <div
                  aria-hidden="true"
                  className="psds-icon psds-icon--size-small psds-verticaltabs__header__label__icon"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <ul
              aria-hidden={true}
              className="psds-verticaltabs__list psds-verticaltabs__list--collapsible"
            >
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Work Log
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Project Timeline
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Leaderboard
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Snapshot
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Daily Updates
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Spot Check
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <button
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                onClick={[Function]}
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                >
                  Review & Collaborate
                </span>
                <div
                  aria-hidden="true"
                  className="psds-icon psds-icon--size-small psds-verticaltabs__header__label__icon"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <ul
              aria-hidden={true}
              className="psds-verticaltabs__list psds-verticaltabs__list--collapsible"
            >
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Review Workflow
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Review Collaboration
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                  data-active={true}
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      PR Resolution
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Knowledge Sharing
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Player Card
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <button
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                onClick={[Function]}
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                >
                  Delivery
                </span>
                <div
                  aria-hidden="true"
                  className="psds-icon psds-icon--size-small psds-verticaltabs__header__label__icon"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <ul
              aria-hidden={true}
              className="psds-verticaltabs__list psds-verticaltabs__list--collapsible"
            >
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Retrospective
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
          <li>
            <div
              className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier1 psds-theme--dark"
            >
              <button
                aria-expanded={true}
                className="psds-verticaltabs__tier1__header"
                onClick={[Function]}
              >
                <div
                  className="psds-icon psds-icon--size-medium psds-verticaltabs__item__icon"
                >
                  <svg
                    aria-label="placeholder icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M14 12a2 2 0 1 1-4 0 2 2 0 0 1 4 0zM8 3H4a1 1 0 0 0-1 1v4h2V5h3V3zm2 2V3h4v2h-4zm9 3V5h-3V3h4a1 1 0 0 1 1 1v4h-2zm0 6v-4h2v4h-2zm-3 5h3v-3h2v4a1 1 0 0 1-1 1h-4v-2zm-6 0h4v2h-4v-2zm-5-3v3h3v2H4a1 1 0 0 1-1-1v-4h2zm0-6v4H3v-4h2z"
                      fillOpacity=".95"
                    />
                  </svg>
                </div>
                <span
                  className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                >
                  Fundamentals
                </span>
                <div
                  aria-hidden="true"
                  className="psds-icon psds-icon--size-small psds-verticaltabs__header__label__icon"
                >
                  <svg
                    aria-label="caret down icon"
                    role="img"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="m11.646 15.056-4.292-4.292a.5.5 0 0 1 0-.708l.703-.703a.5.5 0 0 1 .707 0L12 12.58l3.236-3.227a.5.5 0 0 1 .707 0l.703.703a.5.5 0 0 1 0 .708l-4.292 4.292a.5.5 0 0 1-.708 0z"
                    />
                  </svg>
                </div>
              </button>
            </div>
            <ul
              aria-hidden={true}
              className="psds-verticaltabs__list psds-verticaltabs__list--collapsible"
            >
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Code
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Submit
                    </span>
                  </a>
                </div>
              </li>
              <li>
                <div
                  className="psds-verticaltabs__item psds-theme--dark psds-verticaltabs__tier2 psds-theme--dark"
                >
                  <a
                    aria-hidden="true"
                    className="psds-verticaltabs__tier2__header"
                    href="#"
                    onClick={[Function]}
                    tabIndex={-1}
                  >
                    <span
                      className="psds-verticaltabs__header__label psds-verticaltabs__header__label--hide-labels"
                    >
                      Review
                    </span>
                  </a>
                </div>
              </li>
            </ul>
          </li>
        </ul>
      </li>
    </ul>
  </div>
</div>
`;
